[package]
name = "snui"
version = "0.1.0"
authors = ["Eirik Tobiassen <eirtob98@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snew = {git = "https://github.com/Zower/snew", branch = "main"}
eframe = "0.15.0"
