[package]
name = "snui"
version = "0.1.0"
authors = ["Eirik Tobiassen <eirtob98@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snew = {git = "https://github.com/Zower/snew", branch = "main", features=["parse_content"]}
eframe = "0.15.0"
image = "0.23.14"
crossbeam-channel = "0.5.1"
