[package]
name = "snui"
version = "0.1.0"
authors = ["Eirik Tobiassen <eirtob98@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snew = { git = "https://github.com/Zower/snew", branch = "main", features = ["parse_content", "code_flow"] }
eframe = { version = "0.15.0", features = ["persistence"] }
image = "0.23.14"
crossbeam-channel = "0.5.1"
toml = "0.5.8"
serde = "1.0.132"
serde_derive = "1.0.132"
bytes = "1.1.0"
lru = "0.7.1"